【驱动开发】添加了ITM串口打印功能

--- a/stlink.cfg
+++ b/stlink.cfg
@@ -1,10 +1,12 @@
 source [find interface/stlink.cfg]
 transport select hla_swd
 
-# 内存大小 这里我的是512kb，就是80000
-; set WORKAREASIZE 0x80000
-
-# chip name 改为相应型号
-set CHIPNAME STM32F407VET6
-
 source [find target/stm32f4x.cfg]
+
+# 启用 SWO 输出
+;telnet localhost 4444
+
+;tpiu config internal :3444 uart off 168000000 2000000
+;itm port 0 on
+
+;tpiu config internal swo.log uart off 168000000 2000000
