--- a/GUI/lvgl-simulator/CMakeLists.txt
+++ b/GUI/lvgl-simulator/CMakeLists.txt
@@ -1,7 +1,7 @@
 # ----------------------------------设置你的UI路径（选择项目）------------------------------
 set(UI_DIR ../UI/driversDevelop)
 # ----------------------------------选项------------------------------
-#set(USE_STATIC_LIBRARY True)
+#set(USE_STATIC_LIBRARY True)9
 
 # ----------------------------------自动根据选项来配置------------------------------
 
