--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.29)
-include(cmake/common_function.cmake)
+include(cmake/common_functions.cmake)
 include(cmake/configure_project.cmake)
 project(Furina LANGUAGES C CXX ASM)
 # --------------------------------------选择你的项目--------------------------------
 # 如果你是在CLion里，那么可以直接在斜杆后面输入首字母，会自动弹出相关项目选项
 set(PROJECT_DIR Projects/driversDevelop)
 
-
+# 创建test项目目录，其下有ui和app目录，并且各目录下有相应文件
+create_project(test)
 
 
 # --------------------------------------包含子cmake--------------------------------
