--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,7 +227,8 @@ file(GLOB_RECURSE BSP_SRC "BSP/src/*.c")
 set(BSP_DIR BSP/inc)
 add_library(libbsp STATIC ${BSP_SRC}
         BSP/src/i2c.c
-        BSP/src/touch.c)
+        BSP/src/touch.c
+        BSP/src/delay.c)
 target_include_directories(libbsp PUBLIC ${BSP_DIR})
 target_link_libraries(libbsp PUBLIC libdrivers)
 # 设置静态库的输出目录
